@@ -25,7 +25,7 @@ Default is \dQuote{BatchExperimentRegistry}.}
 
 \item{file.dir}{[\code{character(1)}]\cr
 Path where files regarding the registry / jobs should be saved.
-Default is dQuote{<name of registry>_files} in current working directory.}
+Default is \dQuote{<name of registry>_files} in current working directory.}
 
 \item{sharding}{[\code{logical(1)}]\cr
 Enable sharding to distribute result files into different subdirectories?
